--- a/i18n/en.json
+++ b/i18n/en.json
@@ -10,4 +10,8 @@
 	"tooltip-pt-sandbox": "Your sandbox",
 	"sandboxlink-editintro-pagename": "-",
 	"sandboxlink-preload-pagename": "-"
+	"userboardlink-desc": "Adds a link to user's board to personal tools menu",
+	"userboardlink-page-name": "UserBoard",
+	"userboardlink-portlet-label": "User Board",
+	"tooltip-pt-userboard": "Your user board"
 }
