--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,7 +9,7 @@
 	"sandboxlink-portlet-label": "Sandbox",
 	"tooltip-pt-sandbox": "Your sandbox",
 	"sandboxlink-editintro-pagename": "-",
-	"sandboxlink-preload-pagename": "-"
+	"sandboxlink-preload-pagename": "-",
 	"userboardlink-desc": "Adds a link to user's board to personal tools menu",
 	"userboardlink-page-name": "UserBoard",
 	"userboardlink-portlet-label": "User Board",
